tests/ui/snapshots/syntax_keyword_as_name.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_keyword_as_name.wardscript
---
exit: Some(1)
--- human ---
[W0010] Error: expected identifier, found keyword `match`
   ╭─[ tests/ui/syntax_keyword_as_name.wardscript:2:9 ]
   │
 2 │     let match = 1;
   │         ──┬──  
   │           ╰──── reserved keyword
   │ 
   │ Help: keywords can't be used as names; pick another name
───╯
error: could not check `tests/ui/syntax_keyword_as_name.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0010",
      "help": "keywords can't be used as names; pick another name",
      "labels": [
        {
          "message": "reserved keyword",
          "primary": true,
          "span": {
            "end": {
              "column": 14,
              "line": 2,
              "offset": 29
            },
            "start": {
              "column": 9,
              "line": 2,
              "offset": 24
            }
          }
        }
      ],
      "message": "expected identifier, found keyword `match`",
      "severity": "error",
      "span": {
        "end": {
          "column": 14,
          "line": 2,
          "offset": 29
        },
        "start": {
          "column": 9,
          "line": 2,
          "offset": 24
        }
      }
    }
  ],
  "file": "tests/ui/syntax_keyword_as_name.wardscript"
}
