tests/ui/snapshots/syntax_llm_missing_return_type.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_llm_missing_return_type.wardscript
---
exit: Some(1)
--- human ---
[W0017] Error: `by llm` function `summarize` has no return type
   ╭─[ tests/ui/syntax_llm_missing_return_type.wardscript:1:4 ]
   │
 1 │ fn summarize(text: String)
   │    ────┬────  
   │        ╰────── add a return type here
   │ 
   │ Help: the model's answer is parsed and validated against the return type, e.g. `-> Ticket`
───╯
error: could not check `tests/ui/syntax_llm_missing_return_type.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0017",
      "help": "the model's answer is parsed and validated against the return type, e.g. `-> Ticket`",
      "labels": [
        {
          "message": "add a return type here",
          "primary": true,
          "span": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3
            }
          }
        }
      ],
      "message": "`by llm` function `summarize` has no return type",
      "severity": "error",
      "span": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3
        }
      }
    }
  ],
  "file": "tests/ui/syntax_llm_missing_return_type.wardscript"
}
