tests/ui/snapshots/syntax_llm_prompt_not_string.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/syntax_llm_prompt_not_string.wardscript
---
exit: Some(1)
--- human ---
[W0016] Error: expected a prompt string after `by llm`, found `text`
   ╭─[ tests/ui/syntax_llm_prompt_not_string.wardscript:3:12 ]
   │
 3 │     by llm text
   │            ──┬─  
   │              ╰─── expected a string literal
   │ 
   │ Help: write the prompt inline; use `{...}` to insert values: `by llm "Summarize: {text}"`
───╯
error: could not check `tests/ui/syntax_llm_prompt_not_string.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0016",
      "help": "write the prompt inline; use `{...}` to insert values: `by llm \"Summarize: {text}\"`",
      "labels": [
        {
          "message": "expected a string literal",
          "primary": true,
          "span": {
            "end": {
              "column": 16,
              "line": 3,
              "offset": 67
            },
            "start": {
              "column": 12,
              "line": 3,
              "offset": 63
            }
          }
        }
      ],
      "message": "expected a prompt string after `by llm`, found `text`",
      "severity": "error",
      "span": {
        "end": {
          "column": 16,
          "line": 3,
          "offset": 67
        },
        "start": {
          "column": 12,
          "line": 3,
          "offset": 63
        }
      }
    }
  ],
  "file": "tests/ui/syntax_llm_prompt_not_string.wardscript"
}
