tests/ui/snapshots/syntax_missing_comma_in_call.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_missing_comma_in_call.ward
---
exit: Some(1)
--- human ---
[W0010] Error: expected `,` or `)`, found `2`
   ╭─[ tests/ui/syntax_missing_comma_in_call.ward:2:11 ]
   │
 2 │     add(1 2)
   │           ┬  
   │           ╰── expected `,` or `)`
───╯
error: could not check `tests/ui/syntax_missing_comma_in_call.ward` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0010",
      "file": "tests/ui/syntax_missing_comma_in_call.ward",
      "help": null,
      "labels": [
        {
          "message": "expected `,` or `)`",
          "primary": true,
          "span": {
            "end": {
              "column": 12,
              "line": 2,
              "offset": 27
            },
            "start": {
              "column": 11,
              "line": 2,
              "offset": 26
            }
          }
        }
      ],
      "message": "expected `,` or `)`, found `2`",
      "severity": "error",
      "span": {
        "end": {
          "column": 12,
          "line": 2,
          "offset": 27
        },
        "start": {
          "column": 11,
          "line": 2,
          "offset": 26
        }
      }
    }
  ],
  "file": "tests/ui/syntax_missing_comma_in_call.ward"
}
