tests/ui/snapshots/syntax_missing_semicolon.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_missing_semicolon.wardscript
---
exit: Some(1)
--- human ---
[W0015] Error: expected `;`, found `let`
   ╭─[ tests/ui/syntax_missing_semicolon.wardscript:2:13 ]
   │
 2 │     let x = 1
   │             ┬  
   │             ╰── expected `;` after this
   │ 
   │ Help: statements end with `;`
───╯
error: could not check `tests/ui/syntax_missing_semicolon.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0015",
      "file": "tests/ui/syntax_missing_semicolon.wardscript",
      "help": "statements end with `;`",
      "labels": [
        {
          "message": "expected `;` after this",
          "primary": true,
          "span": {
            "end": {
              "column": 14,
              "line": 2,
              "offset": 29
            },
            "start": {
              "column": 13,
              "line": 2,
              "offset": 28
            }
          }
        }
      ],
      "message": "expected `;`, found `let`",
      "severity": "error",
      "span": {
        "end": {
          "column": 14,
          "line": 2,
          "offset": 29
        },
        "start": {
          "column": 13,
          "line": 2,
          "offset": 28
        }
      }
    }
  ],
  "file": "tests/ui/syntax_missing_semicolon.wardscript"
}
