tests/ui/snapshots/syntax_unclosed_block.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/syntax_unclosed_block.wardscript
---
exit: Some(1)
--- human ---
[W0021] Error: unclosed `{`
   ╭─[ tests/ui/syntax_unclosed_block.wardscript:1:15 ]
   │
 1 │ fn f() -> Int {
   │               ┬  
   │               ╰── this delimiter is never closed
   │ 
 5 │ fn g() -> Int {
   │ ─┬  
   │  ╰── expected `}` before `fn`
───╯
error: could not check `tests/ui/syntax_unclosed_block.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0021",
      "file": "tests/ui/syntax_unclosed_block.wardscript",
      "help": null,
      "labels": [
        {
          "message": "this delimiter is never closed",
          "primary": true,
          "span": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15
            },
            "start": {
              "column": 15,
              "line": 1,
              "offset": 14
            }
          }
        },
        {
          "message": "expected `}` before `fn`",
          "primary": false,
          "span": {
            "end": {
              "column": 3,
              "line": 5,
              "offset": 40
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 38
            }
          }
        }
      ],
      "message": "unclosed `{`",
      "severity": "error",
      "span": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15
        },
        "start": {
          "column": 15,
          "line": 1,
          "offset": 14
        }
      }
    }
  ],
  "file": "tests/ui/syntax_unclosed_block.wardscript"
}
